--- a/renderer/styles/index.css
+++ b/renderer/styles/index.css
@@ -17,6 +17,7 @@
   
   body, html {
     height: 100%;
+    cursor: default;
   }
   
   /* Top Bar */
@@ -66,11 +67,23 @@
     background-color: #5B2B8D;
     padding: 10px;
     outline: none;
-    border: none;
+    border: 1px solid rgba(128, 128, 128, 0);
     max-width: 250px;
     max-height: 80px;
     font-size: 2.5vh;
     color: white;
+    transition: all 0.2s ease-in-out;
+    
+  }
+  .content #start_:hover {
+    cursor: pointer;
+    border-radius: 15px;
+    border: 1px solid gray;
+    box-shadow: 2px 2px 10px gray;
+    /* width: 21%;
+    height: 8.5%;
+    max-width: 300px;
+    max-height: 100px; */
   }
   
   .navbar .tagline {
