--- a/renderer/styles/index.css
+++ b/renderer/styles/index.css
@@ -93,4 +93,39 @@
     opacity: 0.8;
   }
   
+
+
+  .generated_scenes_ {
+    position: relative; width: 45%;height: 200px;
+  }
+  .scene_ids_ {
+    width: 100px;padding: 10px;height: auto;background-color: white;border-radius: 5px;text-align: center;margin-left: 20px;
+  }
+  .scene_prompt_ {
+    width: 100%;height:80%;background-color: gray;border-radius: 10px;
+    background-color: #88808075;
+    overflow-y: scroll;padding: 10px;    
+    display: flex;justify-content: center;
+    align-items: center;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    box-shadow: 2px 2px 10px gray;
+  }
+  .scene_prompt_ .scene_prompt_textarea {
+    max-height: 110px; height: 95%; outline: none; border: none; width: 95%; font-size: 1.9vh;background-color: transparent;color: white;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+  }
   
+  .scenes_controls_ {
+    width: 99%;height: 40px;border-radius: 10px;display: flex;
+    justify-content: flex-end;align-items: center;
+    position:absolute;  bottom: 0px;column-gap: 10px; bottom: 5px;    
+  }
+
+  .refresh_prompt_btn_ {
+    background-color: transparent;outline: none;border: none;
+  }
+  .update_prompt_btn_ {
+    height: auto;border-radius: 5px; padding: 10px 25px;font-size: 1.3vh;
+  }
