fixed image rendering

--- a/renderer/styles/index.css
+++ b/renderer/styles/index.css
@@ -151,3 +151,20 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+
+
+
+.render_image_style_ {
+  width: auto; height: 90%; padding: 10px 20px;font-size: 1.5vh; color: black;background-color: white;border-radius: 10px; cursor: pointer;
+}
+.image_resolution_{
+  appearance: none;
+  -webkit-appearance: none;
+  background-image: url('data:image/svg+xml;utf8,<svg fill="black" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right 10px top 50%;
+  overflow: hidden; /* Hide scrollbar */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
