--- a/renderer/styles/prompt.css
+++ b/renderer/styles/prompt.css
@@ -1,7 +1,7 @@
 
 #prompt_input {
   width: 40%;
-  height: 80px;
+  height: 100%;
   border-radius: 10px;
   padding: 10px;
   background-color: #88808075;
@@ -17,4 +17,30 @@
   border: none;
   font-size: 2vh;
   color: #b2b2b2;
+}
+
+#video_length_input{
+  width: 8vw;height: 100%; max-width: 134px;
+}
+
+#video_length_input select {
+  width: 100%; 
+  height: 100%;
+  font-size: 2vh; 
+  padding: 10px 20px;
+  background-color: #fdfdfdce;
+  outline: none;
+  border-radius: 10px;
+  color: rgb(46, 44, 44); 
+  appearance: none; 
+  -webkit-appearance: none; 
+  -moz-appearance: none; 
+  text-align: center; 
+  overflow-y: auto;
+  overflow-y: auto; /* Allows scrolling */
+  scrollbar-width: none; /* Hides scrollbar in Firefox */
+}
+
+#video_length_input  select::-webkit-scrollbar {
+  display: none; /* Hides scrollbar in WebKit browsers */
 }
