--- a/renderer/styles/index.css
+++ b/renderer/styles/index.css
@@ -70,6 +70,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    row-gap: 15px;
   }
 
   /* Style for the message text */
