--- a/renderer/styles/scenes.css
+++ b/renderer/styles/scenes.css
@@ -109,3 +109,31 @@
 .loading_overlay_full_ {
   transition: opacity 0.4s ease;
 }
+
+/* Loader Styles */
+.loader {
+  display: none;
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-top: 4px solid rgb(255, 255, 255);
+  border-radius: 50%;
+  width: 3vh;
+  height: 3vh;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+      transform: rotate(0deg);
+  }
+
+  100% {
+      transform: rotate(360deg);
+  }
+}
+
+/* Utility Styles */
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
