--- a/renderer/styles/generate_audio.css
+++ b/renderer/styles/generate_audio.css
@@ -22,8 +22,8 @@
 }
 
 #upload_audio>p {
-    margin-bottom: 20px;
-    font-size: 5vh;
+    margin-bottom: 2vw;
+    font-size: 3vw;
     width: 100%;
     text-align: center;
     border-radius: 10px;
@@ -56,6 +56,7 @@
     display: flex;
     justify-content: flex-end;
     column-gap: 10px;
+    right: 10px;
 }
 
 /* Content Styles */
@@ -65,7 +66,7 @@
 }
 
 #message p {
-    font-size: 7vh;
+    font-size: 4vw;
     color: white;
     font-weight: bold;
 }
