--- a/renderer/styles/index.css
+++ b/renderer/styles/index.css
@@ -70,12 +70,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    row-gap: 15px;
+    row-gap: 5px;
   }
 
   /* Style for the message text */
   #message p {
-    font-size: 7vh;
+    font-size: 4vw;
     color: white;
     font-weight: bold;
 }
@@ -125,8 +125,8 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    column-gap: 50px;
-    row-gap: 20px;
+    column-gap: 2.5vw;
+    row-gap: 1vw;
     overflow-y: scroll;
     margin-bottom: 20px;
     scrollbar-width: none; /* Firefox */
@@ -140,12 +140,13 @@
   }
 
   .scene_ids_ {
-    width: 100px;
+    width: clamp(12px, 7vw, 200px);
     margin-left: 20px;
     padding: 10px;
     background-color: white;
     border-radius: 5px;
     text-align: center;
+    font-size: clamp(2px, 1.2vw, 15px);
   }
 
   .scene_prompt_ {
@@ -247,12 +248,17 @@
 /* Back button styles */
 #back_ {
   background-color: rgba(128, 128, 128, 0.308);
-  width: 45%;
-  height: 100%;
+  width: 15vw;
+  height: 7vh;
+  max-width: 200px;
+  font-size: clamp(12px, 2vw, 28px);
 }
 
 /* Next button styles */
 #next_ {
-  width: 45%;
-  height: 100%;
+  width: auto;
+  min-width: 15vw;
+  max-width: 200px;
+  font-size: clamp(12px, 2vw, 28px);
+  height: 7vh;
 }
