--- a/renderer/styles/prompt.css
+++ b/renderer/styles/prompt.css
@@ -1,7 +1,7 @@
 
 #prompt_input {
   width: 50%;
-  height: 100%;
+  height: 55%;
   border-radius: 10px;
   padding: 10px;
   background-color: #88808075;
@@ -20,13 +20,13 @@
 }
 
 .select_input_{
-  width: 8vw;height: 100%; max-width: 134px;
+  width: auto;height: 100%; max-width: 134px;
 }
 
 .select_input_ select {
   width: 100%; 
   height: 100%;
-  font-size: 2vh; 
+  font-size: clamp(5px, 1.2vw, 21px); 
   padding: 10px 20px;
   background-color: #fdfdfdce;
   outline: none;
